--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<head>
+<link rel="stylesheet" type="text/css" href="myStyle.css">
+</head>
+
+<body>
+
+
+<header>
+<nav>
+<br>
+<a href="/html/"><div class="text_header">Pedro Girardi</div></a>
+</nav>
+<br>
+</header>
+
+
+<div class="flex-container">
+  <div class="flex-item"><a href="/html/">About me</a> </div>
+  <div class="flex-item"><a href="/css/">Résumé</a></div>
+  <div class="flex-item"><a href="/js/">Hobbies</a></div>
+</div>
+
+
+<main>
+ <h1 align="center">Welcome to my personal website!</h1>
+</main>
+
+
+</body>
+</html>
