--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
 <header>
 <nav>
 <br>
-<a href="/html/"><div class="text_header">Pedro Girardi</div></a>
+<div class="name_header"><a href=""><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
-<br>
+<div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
+<div class="button_link"> <a href="/"><div class="sections_header"> Résumé </div></a>  </div>
+<div class="button_link"> <a href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
+
 </header>
 
 
-<div class="flex-container">
-  <div class="flex-item"><a href="/html/">About me</a> </div>
-  <div class="flex-item"><a href="/css/">Résumé</a></div>
-  <div class="flex-item"><a href="/js/">Hobbies</a></div>
-</div>
 
 
 <main>
  <h1 align="center">Welcome to my personal website!</h1>
 </main>
+
+<footer>
+<br>
+(507) 581-1708 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75">
+<img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_gray-128.png"
+width="20" height="20"> </a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pedrogirardi16@gmail.com
+<p></p>
+</footer>
 
 
 </body>
