--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <br>
 <div class="name_header"><a href=""><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
+<div class="margin_header">
 <div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
 <div class="button_link"> <a href="/"><div class="sections_header"> Résumé </div></a>  </div>
 <div class="button_link"> <a href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
-
+</div>
 </header>
 
 
@@ -27,13 +28,10 @@
 </main>
 
 <footer>
-<br>
-(507) 581-1708 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75">
-<img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_gray-128.png"
-width="20" height="20"> </a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pedrogirardi16@gmail.com
-<p></p>
+<div class="button_bottom"> (507) 581-1708 </div>
+<div class="button_bottom"> <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_gray-128.png"
+width="20" height="20"> </a> </div>
+<div class="button_bottom"> pedrogirardi16@gmail.com </div>
 </footer>
 
 
