--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <header>
 <nav>
 <br>
-<div class="name_header"><a href=""><div class="button_name">Pedro Girardi</div></a></div>
+<div class="name_header"><a href="girardip.github.io"><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
 <div class="margin_header">
 <div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
-<div class="button_link"> <a href="/"><div class="sections_header"> Résumé </div></a>  </div>
+<div class="button_link"> <a href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
 <div class="button_link"> <a href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
 </div>
 </header>
@@ -24,9 +24,29 @@
 
 
 <main>
-<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" style="width:284px;height:427px;"> </div>
+<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" align="right" style="width:250px;height:250px;">
+<br clear="all">
+<ul>
+    <li>Carleton College '19, Economics and Mathematics</li>
+    <li>Very into biz dev, quantitative analysis and technology</li>
+    <li>Fan of fast-paced, dynamic environments.</li>
+    <li>Brazilian and Italian citizen, CPT/H1-B in the US</li>
+
+</ul>
+</div>
+
+<div class="left">
+
+<p>
+<div class="main_text">
+    Welcome to my website!
+
+</div>
+</p>
 
 
+
+</div>
 </main>
 
 <footer>
