Resolver problemas resume e tal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
 <nav>
 <br>
-<div class="name_header"><a href="girardip.github.io"><div class="button_name">Pedro Girardi</div></a></div>
+<div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
 <div class="margin_header">
 <div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
@@ -30,7 +30,7 @@
     <li>Carleton College '19, Economics and Mathematics</li>
     <li>Very into biz dev, quantitative analysis and technology</li>
     <li>Fan of fast-paced, dynamic environments.</li>
-    <li>Brazilian and Italian citizen, CPT/H1-B in the US</li>
+    <li>Brazilian and Italian citizen, CPT/H1-B eligible in the US</li>
 
 </ul>
 </div>
