--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <header>
 <nav>
 <br>
-<div class="name_header"><a href=""><div class="button_name">Pedro Girardi</div></a></div>
+<div class="name_header"><a href="/index.html"><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
 <div class="margin_header">
 <div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
@@ -18,9 +18,5 @@
 </div>
 </header>
 
+<iframe src="https://drive.google.com/file/d/0B61UI4zs0w20aXRPelZDYmwzUVU/preview" width="100%" height=1080px></iframe>
 
-<div class="res">
-
-<iframe src="https://drive.google.com/file/d/0B61UI4zs0w20aXRPelZDYmwzUVU/preview" width="100%" height=1050px></iframe>
-
-</div>
