--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <main>
-<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" align="center" style="width:200px;height:200px;">
+<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" align="right" style="width:200px;height:200px;">
 <br clear="all">
 <ul>
     <li>Carleton College '19, Economics and Mathematics</li>
@@ -39,8 +39,14 @@
 
 <div class="main_text">
     <p>
-    Welcome to my website! I am fascinated by market applications of Economics and Math
-    </p>
+    Welcome to my website! I am an undergrad student fascinated by market applications of Econ and Math.
+    Throughout my life, I have engaged in several projects, such as a hackathon, a cooking club and Model United Nations competitions.
+    My experience attests that I am a strong teamworker, and I firmly believe that a qualified and motivated group can achieve any goal.
+    I am currently looking for summer internships (June - August, 2017).
+
+    <p> You can get more details in the About Me page or in my résumé.
+    Please shoot me an email and let's get this conversation started. </p>
+
 </div>
 
 
