--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <head>
 <link rel="stylesheet" type="text/css" href="myStyle.css">
+<title>Pedro Girardi | Home</title>
 </head>
 
 <body>
@@ -44,8 +45,8 @@
     My experience attests that I am a strong teamworker, and I firmly believe that a qualified and motivated group can achieve any goal.
     I am currently looking for summer internships (June - August, 2017).
 
-    <p> You can get more details in the About Me page or in my résumé.
-    Please shoot me an email and let's get this conversation started. </p>
+    <p> You can get more details in the <i>About Me</i> page or in my <i>résumé</i>.
+    Please shoot me an email <!-- at pedrogirardi16@gmail.com  -->and let's get this conversation started. </p>
 
 </div>
 
