--- a/aboutme.html
+++ b/aboutme.html
@@ -14,12 +14,32 @@
 <div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
 <div class="margin_header">
-<div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
-<div class="button_link"> <a href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
-<div class="button_link"> <a href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
+<div class="button_link"> <a class="one" href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
+<div class="button_link"> <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
+<div class="button_link"> <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
 </div>
 </header>
 
+<main class="aboutme">
+
+<div class="float-left-first">
+<h1>About me:</h1>
+<p> <div class="main_text">
+In this page, I highlight four of my most relevant traits. My goal here is to show a big picture that cannot be expressed only through a résumé or LinkedIn profile. </p>
+<p>To all my co-workers, professors, and friends who helped me identify, put in practice, and improve these skills, thank you very much!
+</div></p>
+
+</div>
+
+<div class="float-left"> <div class="main_text">
+
+I am a <b>leader</b>.
+
+
+</div></div>
+<div  class="float-left">CONTENT OF COLUMN THREE GOES HERE</div>
+
+</main>
 
 <footer>
 <div class="button_bottom"> (507) 581-1708 </div>
