--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,9 @@
 <div class="name_header"><a href="/index.html"><div class="button_name">Pedro Girardi</div></a></div>
 </nav>
 <div class="margin_header">
-<div class="button_link"> <a href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
-<div class="button_link"> <a href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
-<div class="button_link"> <a href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
+<div class="button_link"> <a class="one" href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
+<div class="button_link"> <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
+<div class="button_link"> <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
 </div>
 </header>
 
