--- a/aboutme.html
+++ b/aboutme.html
@@ -24,20 +24,51 @@
 
 <div class="float-left-first">
 <h1>About me:</h1>
-<p> <div class="main_text">
-In this page, I highlight four of my most relevant traits. My goal here is to show a big picture that cannot be expressed only through a résumé or LinkedIn profile. </p>
+<p> <div class="main_text_about">
+In this page, I highlight four of my most relevant traits. My goal here is to show a big picture that cannot be expressed through a résumé or LinkedIn profile. </p>
 <p>To all my co-workers, professors, and friends who helped me identify, put in practice, and improve these skills, thank you very much!
 </div></p>
 
 </div>
+<div class="main_text_about">
+<div class="float-left">
+    <p>
+        <b>Leadership</b> comes naturally to me. Before turning 18, I had already co-founded the first extracurricular club of my high school,
+        been chosen by my fellow classmates to deliver the valedictorian speech in high school,
+        and selected to represent my state in the national program Brazilian Young Parliament.
+        More recently, I have become an Resident Assistant (RA), and led the team responsible for BSCUE,
+        a preparation program for Brazilian students applying to American universities.  </p>
+    <p>
+        I <b>dream big</b>, and achieve unthinkable results. I led the team that expanded and modernized the services offered by BSCUE.
+        The program started to provide a complete preparation assistance for the application
+         through text guides, webinars with recruiters of top universities and individual
+        assistance. In high school, I co-founded the first club sthe Model United Nations Club. The club won a
+        "Best Delegation" honor in a national competition and dozens of honorable and verbal mentions.
 
-<div class="float-left"> <div class="main_text">
 
-I am a <b>leader</b>.
+        </p>
 
-
-</div></div>
-<div  class="float-left">CONTENT OF COLUMN THREE GOES HERE</div>
+</div>
+<div  class="float-left">
+    <p>
+        I am an <b>explorer</b>. In high school I decided to apply to colleges in the US
+         when no one in my family had studied abroad or been to the US.
+         At Carleton, I have taken courses from seven academic departments. Outside class, I have been in leadership positions
+         in the Culinary Club, II Hackathon and the Education and Curricular Committee. Over freshman summer, I was Resource Development
+         Intern at CIFOR, an international environment organization, in Rome, Italy.
+    </p>
+    <p>
+        I <b>learn</b> fast. I had never heard about the application process before the end of my junior year in high school,
+        but I got into one of the best liberal arts colleges in the US.
+        Nor had I ever been to a hackathon before II CarlHacks, but the event went smoothly and hit a record number of participants
+        (many thanks to the other board members!).
+        I also had never been to an English speaking country or written a paper in English before college,
+        but I have succeeded in one of the most rigorous schools in the country.
+        In short, I can quickly adapt to new environments and deliver outstanding results. This is, I believe, my most important skill,
+        because it allows me to succeed in any new situation.
+    </p>
+</div>
+</div>
 
 </main>
 
