--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <head>
 <link rel="stylesheet" type="text/css" href="myStyle.css">
+<title>Pedro Girardi - About</title>
 </head>
 
 <body>
@@ -12,10 +13,11 @@
 <div class="mod_br"></div>
 <div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
 <div class="margin_header">
-<div class="button_link"> <a class="one" href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
-<div class="button_link"> <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
-<div class="button_link"> <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
-</div>
+<a class="one" href="/aboutme"><div class="sections_header"> About </div></a>
+<a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
+<a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>
+<a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>
+</div> <div class="mod_br_small"></div>
 </header>
 
 <main class="aboutme">
