--- a/resume.html
+++ b/resume.html
@@ -3,19 +3,19 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="myStyle.css">
 <head>
+<title>Pedro Girardi - Résumé</title>
 </head>
 
 
 <header>
-<nav>
-<br>
-<div class="name_header"><a href="/index.html"><div class="button_name">Pedro Girardi</div></a></div>
-</nav>
+<div class="mod_br"></div>
+<div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
 <div class="margin_header">
-<div class="button_link"> <a class="one" href="/aboutme"><div class="sections_header"> About me </div></a>  </div>
-<div class="button_link"> <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>  </div>
-<div class="button_link"> <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>  </div>
-</div>
+<a class="one" href="/aboutme"><div class="sections_header"> About </div></a>
+<a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
+<a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>
+<a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>
+</div> <div class="mod_br_small"></div>
 </header>
 
 <iframe src="https://drive.google.com/file/d/0B61UI4zs0w20aXRPelZDYmwzUVU/preview" width="100%" height=1080px></iframe>
