--- a/aboutme.html
+++ b/aboutme.html
@@ -24,11 +24,13 @@
 
 <div class="float-left-first">
 <h1>About me:</h1>
-<p> <div class="main_text_about">
+<div class="main_text_about_first">
 In this page, I highlight four of my most relevant traits. My goal here is to show a big picture that cannot be expressed through a résumé or LinkedIn profile. </p>
 <p>To all my co-workers, professors, and friends who helped me identify, put in practice, and improve these skills, thank you very much!
 </div></p>
-
+<img class="commencement" src="commencement.jpg" alt="Valedictorian speech" align="left" style=" width:100%;height:100% /*width:217px;height:234*/;">
+ <figcaption><i>Valedictorian speech, 2014</i></figcaption>
+<!-- <div class="footer_blank"></div> -->
 </div>
 <div class="main_text_about">
 <div class="float-left">
@@ -38,6 +40,10 @@ In this page, I highlight four of my most relevant traits. My goal here is to sh
         and been selected to represent my state in the national program Brazilian Young Parliament.
         More recently, I have become an Resident Assistant (RA), and led BSCUE,
         a preparation program for Brazilian students applying to American universities.  </p>
+
+         <img class="commencement" src="bscue.jpg" alt="BSCUE Team" align="left" style=" width:100%;height:100% /*width:217px;height:234*/;">
+        <figcaption><i>BSCUE Team, 2016</i></figcaption>
+
     <p>
         I <b>dream big</b>, and achieve outstanding results. I led the team that reshaped and improved the services offered by BSCUE.
         The program started to offer a complete preparation assistance, providing text and video guides,
@@ -58,7 +64,11 @@ In this page, I highlight four of my most relevant traits. My goal here is to sh
          in the Culinary Club, was a board member in the II Hackathon, and am a voting member in the Education and Curricular Committee.
          Over freshman summer, I was Resource Development Intern at CIFOR, an international organization for environmental research,
          in Rome, Italy.
-    </p>
+        </p>
+
+        <img class="commencement" src="carlhacks.jpg" alt="CarlHacks Board Members" align="left" style=" width:100%;height:100% /*width:217px;height:234*/;">
+        <figcaption><i>CarlHacks Team, 2016</i></figcaption>
+
     <p>
         I <b>learn fast</b>. I had never heard about the application process or been to an English speaking country
         before the end of my junior year in high school,
