Volta ao index anterior

--- a/index2.html
+++ b/index2.html
@@ -13,14 +13,14 @@
 <header>
 <div class="mod_br"></div>
 <div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
-<div class="margin_header">
+<div class="mod_br"></div>
 <a class="one" href="/aboutme"><div class="sections_header"> About </div></a>
 <a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
 <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>
 <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a>
 </div> <div class="mod_br_small"></div>
+<div class="mod_br_small"></div>
 </header>
-
 
 
 
@@ -40,16 +40,16 @@
 
 <div class="main_text">
     <p>
-    <div class="main_text_big"><b>Welcome to my website!</b></div> I am an undergrad student fascinated by market applications of Econ and Math.
+    Welcome to my website! I am an undergrad student fascinated by market applications of Econ and Math.
     Throughout my life, I have engaged in several projects, such as a hackathon, a cooking club and Model United Nations competitions.
     My experience attests that I am a strong teamworker, and I firmly believe that a qualified and motivated group can achieve any goal.
     I am currently looking for summer internships (June - August, 2017).
-<!--
+
     <p> <a class="two" href="/aboutme">Click here</a> to get more details about my most relevant skills,
     or  <a class="two" href="/resume">here</a> to take a look at my résumé. If you are curious about my personality,
     <a class="two" href="/hobbies">check my hobbies page.</a>
     </p>
- -->
+
 </div>
 
 
