--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <main>
-<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" align="right" style="width:200px;height:200px;">
+<div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" style="width:200px;height:200px;">
 <br clear="all">
 <ul>
     <li>Carleton College '19, Economics and Mathematics</li>
