New pic + new about me

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <div class="right"> <img class="img-circle" src="profile.jpg" alt="Profile picture" style="width:200px;height:200px;">
 <br clear="all">
 <ul>
-    <li>Carleton College '19, Economics and Mathematics</li>
-    <li>Very into biz dev, quantitative analysis and technology</li>
+    <li>Carleton College '19, Economics and Statistics</li>
+    <li>Experience with non-profit and private sector </li>
     <li>Fan of fast-paced, dynamic environments</li>
-    <li>Brazilian and Italian citizen, CPT/OPT eligible in the US</li>
+    <li>Takes pictures and plays soccer for fun</li>
 
 </ul>
 </div>
@@ -40,10 +40,11 @@
 
 <div class="main_text">
     <p>
-    <div class="main_text_big"><b>Welcome to my website!</b></div> I am an undergrad student fascinated by market applications of Econ and Math.
-    Throughout my life, I have engaged in several projects, such as a hackathon, a cooking club and Model United Nations competitions.
-    My experience attests that I am a strong teamworker, and I firmly believe that a qualified and motivated group can achieve any goal.
-    I am currently looking for summer internships (June - August, 2017).
+    <div class="main_text_big"><b>Welcome to my personal website!</b></div>
+    <p>
+    I am currently a Junior Economics and Statistics major at Carleton College, MN. This website should give you a good overview of my interests and experiences. 
+    <p>
+    <b>Short blurb about me:</b>  Born and raised in Brazil, I showed exceptional skills and engagement in academic and extracurricular activities during high school. Because of my achievements, I was awarded one of the very few, competitive scholarships to study in Carleton College, a top 10 liberal arts college in the US. During my college experience, I have led several projects and worked in a wide range of environments, from an NGO in Rome to Anheuser-Bush Inbev in São Paulo. Next summer I will be working for Kantar Consulting, in New York City. 
 <!--
     <p> <a class="two" href="/aboutme">Click here</a> to get more details about my most relevant skills,
     or  <a class="two" href="/resume">here</a> to take a look at my résumé. If you are curious about my personality,
