Added header with hobbies section

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 <a class="one" href="/aboutme"><div class="sections_header"> About </div></a>
 <a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
 <a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>
+<a class="one" href="/photography"><div class="sections_header"> Hobbies </div></a>
 <!-- <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a> -->
 </div> <div class="mod_br_small"></div>
 </header>
