Pictures added to hobbies page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
-<head>
 <link rel="stylesheet" type="text/css" href="myStyle.css">
 <title>Pedro Girardi - Home</title>
 </head>
@@ -45,7 +44,7 @@
     <p>
     I am currently a Junior Economics and Statistics major at Carleton College, MN. This website should give you a good overview of my interests and experiences. 
     <p>
-    <b>Short blurb about me:</b>  Born and raised in Brazil, I showed exceptional skills and engagement in academic and extracurricular activities during high school. Because of my achievements, I was awarded one of the very few, competitive scholarships to study in Carleton College, a top 10 liberal arts college in the US. During my college experience, I have led several projects and worked in a wide range of environments, from an NGO in Rome to Anheuser-Bush Inbev in São Paulo. Next summer I will be working for Kantar Consulting, in New York City. 
+    <b>Short blurb about me:</b>  Born and raised in Brazil, I showed exceptional skills and engagement in academic and extracurricular activities during high school. Because of my achievements, I was awarded one of the very few, competitive international scholarships to study in Carleton College, a top 10 liberal arts college in the US. During my college experience, I have led several projects and worked in a wide range of environments, from an NGO in Rome to Anheuser-Bush Inbev in São Paulo. Next summer I will be working for Kantar Consulting, in New York City. 
 <!--
     <p> <a class="two" href="/aboutme">Click here</a> to get more details about my most relevant skills,
     or  <a class="two" href="/resume">here</a> to take a look at my résumé. If you are curious about my personality,
