--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="myStyle.css">
-<title>Pedro Girardi - Résumé</title>
+<title>Pedro Girardi - Hobbies</title>
 </head>
 
 
@@ -41,6 +41,18 @@
 <p style="font-size:20px;line-height:1;"><br/></p>
   <i>Kathmandu, 2017</i><p></p>
 <img class="img" src="bangladeshMkt.jpg" alt="Nepal" style="width:800px;height:534px;">
+<p style="font-size:20px;line-height:1;"><br/></p>
+  <i>Florence, 2016</i><p></p>
+<img class="img" src="firenze.jpg" alt="BKK" style="width:800px;height:534px;">
+<p style="font-size:20px;line-height:1;"><br/></p>
+  <i>Kathmandu, 2017</i><p></p>
+<img class="img" src="kathmanduB.jpg" alt="BKK" style="width:800px;height:534px;">
+<p style="font-size:20px;line-height:1;"><br/></p>
+  <i>Baluwapati, 2017</i><p></p>
+<img class="img" src="Baluwapati.jpg" alt="Bangladesh" style="width:800px;height:534px;">
+<p style="font-size:20px;line-height:1;"><br/></p>
+  <i>Budapest, 2016</i><p></p>
+<img class="img" src="budapest2.jpg" alt="Nepal" style="width:800px;height:534px;">
 
 
 
