Adding prague picture

--- a/photography.html
+++ b/photography.html
@@ -46,13 +46,17 @@
 <img class="img" src="firenze.jpg" alt="BKK" style="width:800px;height:534px;">
 <p style="font-size:20px;line-height:1;"><br/></p>
   <i>Kathmandu, 2017</i><p></p>
-<img class="img" src="kathmanduB.jpg" alt="BKK" style="width:800px;height:534px;">
+<img class="img" src="kathmanduB.jpg" alt="BKK" style="width:650px;height:650px;">
 <p style="font-size:20px;line-height:1;"><br/></p>
   <i>Baluwapati, 2017</i><p></p>
 <img class="img" src="Baluwapati.jpg" alt="Bangladesh" style="width:800px;height:534px;">
 <p style="font-size:20px;line-height:1;"><br/></p>
   <i>Budapest, 2016</i><p></p>
 <img class="img" src="budapest2.jpg" alt="Nepal" style="width:800px;height:534px;">
+<p style="font-size:20px;line-height:1;"><br/></p>
+  <i>Prague, 2012</i><br />
+  <div class="main_text_about_first"> Not artsy, not mine, but soccer and father make up for it. </div>
+<img class="img" src="prague.png" alt="Nepal" style="width:660px;height:568px;">
 
 
 
