new contact page - simpler

--- a/contact.html
+++ b/contact.html
@@ -25,20 +25,17 @@
 
 <main>
 
-<div class="main_text_contact">
-<div class="float-left-c">
-<div class="main_text_vbig"><i>Get in touch!</i></div>
+
 <p>
 
-<ul class="bigFont" align="center">
-    <li><i>Email:</i> pedrogirardi16@gmail.com</li>
-    <a class="two" href="https://www.linkedin.com/pub/pedro-girardi/110/762/75"><li>linkedin.com/in/pedrogirardi</li></a>
+<ul class="bigFont" align="left">
+    pedrogirardi16@gmail.com
+    <br>
+    <a class="two" href="https://www.linkedin.com/pub/pedro-girardi/110/762/75">linkedin.com/in/pedrogirardi</a>
 
 </ul>
 
 </p>
-
- <img class="displayed" src="phone.png" alt="old phone" align="center" style="width:70%;height:70%;">
 
 </div>
 
