--- a/photography.html
+++ b/photography.html
@@ -10,7 +10,7 @@
 <div class="mod_br"></div>
 <div class="name_header"><a href="/index"><div class="button_name">Pedro Girardi</div></a></div>
 <div class="margin_header">
-<a class="one" href="/resume"><div class="sections_header"> Résumé </div></a>
+<a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
 <a class="one" href="/photography"><div class="sections_header"> Hobbies </div></a>
 <!-- <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a> -->
 </div> <div class="mod_br_small"></div>
