--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@ p.ex1 {
 
     <br>
     
-<p class="ex1">Welcome to my website! My name is Pedro Girardi and I am an Associate at BCG. If you want to learn more about my professional background, please check the contact session. <br><br> 
+<p class="ex1">Hi, my name is Pedro and I am a business consultant located in Montepulciano, Tuscany. I have five years of experience in the corporate world and have recently become a freelancer. Previously I worked in strategy roles at the likes of BCG and Red Bull. My goal is to help businesses succeed by leveraging my quantitative and strategy skills. <br> <br>  
 
-Photography and traveling are two of my favorite hobbies. The photography session has a couple of my favorite travel pictures. I would love to know what are people's favorites! 
+<b>About me:</b> I pride myself of having an international background, which helps me quickly adapt to new circumstances. I grew up in Brazil and went to college in the US, where I graduated in Statistics and Economics. After graduation I worked in the US, Germany and Italy. You can get more detailed info in my CV. 
+<br> <br>  
+
+<b>Business consulting:</b> I offer business consulting, helping companies tackle complicated data and strategy problems. I am a solution to companies that don’t have the internal capabilities or time to solve critical problems, but also don’t want to spend six or seven figures in a project with BCG or McKinsey. Recently I have worked in the tourism space.
+<br> <br>  
+
+<b>Quantitative coaching:</b> I also enjoy teaching and, during my free time, want to start teaching business analysts the skills they need to thrive. I have noticed that better data skills are often the biggest hurdle to someone’s career development. My goal is to help business analysts improve their modeling and data communication skills. 
+<br> <br>  
+
+Please reach out at contact@girardi.io
+
     
 <!--
     <p> <a class="two" href="/aboutme">Click here</a> to get more details about my most relevant skills,
