--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             width: 100%;
             height: auto;
         }
+
+        .sections_header {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            font-family: "Arial";
+            text-align: left;
+            margin-left: 5px;
+            margin-right: 5px;
+            display: inline-block; /* Ensure sections are on the same line */
+        }
+        
     </style>
 </head>
 <body>
@@ -43,9 +55,9 @@
         <a href="/index"><div class="button_name">Pedro Girardi</div></a>
     </div>
     <div class="margin_header">
-        <a class="one" href="/contact"><div class="sections_header"> Contact </div></a>
-        <a class="one" href="/photography"><div class="sections_header"> Photography </div></a>
-        <!-- <a class="one" href="/hobbies"><div class="sections_header"> Hobbies </div></a> -->
+        <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
+        <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
+        <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
     </div>
     <div class="mod_br_small"></div>
 </header>
