--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             padding-right: 10%;
             padding-top: 5%;
             font-size: 18px;
-            font-family: Arial, Helvetica, sans-serif;
             text-align: justify;
         }
 
@@ -22,11 +21,11 @@
         }
 
         .text-container {
-            width: 60%; /* Adjust the width as needed */
+            width: 60%;
         }
 
         .image-container {
-            width: 35%; /* Adjust the width as needed */
+            width: 35%;
         }
 
         .image-container img {
@@ -38,11 +37,10 @@
             color: white;
             text-decoration: none;
             font-size: 16px;
-            font-family: "Arial";
             text-align: left;
             margin-left: 5px;
             margin-right: 5px;
-            display: inline-block; /* Ensure sections are on the same line */
+            display: inline-block;
         }
         
     </style>
@@ -89,12 +87,6 @@
     </div>
 
 </main>
-
-
-<footer>
-    <div class="button_bottom"> <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75"> Linkedin </a> </div>
-    <div class="button_bottom"> contact@girardi.io </div>
-</footer>
 
 </body>
 </html>
