--- a/cv.html
+++ b/cv.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pedro Girardi CV</title>
+    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <title>Pedro Girardi - Home</title>
 </head>
+
 
 <header>
     <div class="mod_br"></div>
@@ -20,9 +23,7 @@
 
 <body>
 
-<!-- Replace 'your_pdf_url.pdf' with the URL of your PDF file 
 <iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/view&embedded=true" width="600" height="400" frameborder="0"></iframe>
--->
 
 </body>
 </html>
