--- a/cv.html
+++ b/cv.html
@@ -22,8 +22,8 @@
 </header>
 
 <body>
-
-<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/view&embedded=true" width="600" height="400" frameborder="0"></iframe>
+    
+<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="100%" frameborder="0"></iframe>
 
 </body>
 </html>
