--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
 
 <body>
     
-<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="100%" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="90vh"  frameborder="0"></iframe>
 
 </body>
 </html>
