--- a/index.html
+++ b/index.html
@@ -66,18 +66,22 @@
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                Hi, my name is Pedro and I am a business consultant located in Montepulciano, Tuscany. I have five years of experience in the corporate world and have recently become a freelancer. Previously I worked in strategy roles at the likes of BCG and Red Bull. My goal is to help businesses succeed by leveraging my quantitative and strategy skills. <br> <br>
+                Hi, my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. <br> <br>
 
-                <b>About me:</b> I pride myself on having an international background, which helps me quickly adapt to new circumstances. I grew up in Brazil and went to college in the US, where I graduated in Statistics and Economics. After graduation, I worked in the US, Germany, and Italy. You can get more detailed info in my CV.
+                <b>About me:</b> 
+
+I pride myself of having an international background, which helps me quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in Brazil, Italy, Germany, and in the US. You can get more detailed info in my CV. 
                 <br> <br>
 
-                <b>Business consulting:</b> I offer business consulting, helping companies tackle complicated data and strategy problems. I am a solution to companies that don’t have the internal capabilities or time to solve critical problems, but also don’t want to spend six or seven figures on a project with BCG or McKinsey. Recently I have worked in the tourism space.
+                <b>Business consulting:</b>
+
+With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. I have worked with companies of all sizes and across many industries. My most recent work has been in the tourism space.
                 <br> <br>
 
-                <b>Quantitative coaching:</b> I also enjoy teaching and, during my free time, want to start teaching business analysts the skills they need to thrive. I have noticed that better data skills are often the biggest hurdle to someone’s career development. My goal is to help business analysts improve their modeling and data communication skills.
+                <b>Quantitative coaching:</b> Quantitative coaching: I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
                 <br> <br>
 
-                Please reach out at contact@girardi.io
+                I like to get to know new people. Please reach out at pedro@girardi.io.
             </p>
         </div>
 
