--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <link rel="stylesheet" type="text/css" href="myStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Pedro Girardi - Home</title>
+    <style>
+
+        .content-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .text-container {
+            width: 60%;
+        }
+
+        .image-container {
+            width: 35%;
+        }
+
+        .image-container img {
+            width: 100%;
+            height: auto;
+        }
+
+        .sections_header {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            text-align: left;
+            margin-left: 5px;
+            margin-right: 5px;
+            display: inline-block;
+        }
+        
+    </style>
 </head>
 <body>
 
