--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                Hi, my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. <br> <br>
+                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. <br> <br>
             </p> 
             
 
