--- a/index.html
+++ b/index.html
@@ -59,14 +59,12 @@
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. <br> <br>
-            </p> 
+                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. 
             
 
             <p class="main_text">
-                <b>About me:</b> 
 
-I pride myself of having an international background, which helps me quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in Brazil, Italy, Germany, and in the US. You can get more detailed info in my CV. 
+I pride myself of having an international background, which helps me quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in Brazil, Italy, Germany, and in the US. You can get more detailed info in my CV. I am currently offering two types of services. 
                 <br> <br>
 
                 <b>Business consulting:</b>
