--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
     <div class="mod_br_small"></div>
 </header>
     
-<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="90vh" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="1000px" frameborder="0"></iframe>
 
 </body>
 </html>
