--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
         .content-container {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-start; /* Align items at the top */
         }
 
         .text-container {
             width: 60%;
-        }
-
-        .image-container {
-            width: 35%;
         }
 
         .image-container img {
@@ -31,8 +27,8 @@
             text-decoration: none;
             font-size: 16px;
             text-align: left;
-            margin-left: 5px;
-            margin-right: 5px;
+            margin-left: 10px;
+            margin-right: 10px;
             display: inline-block;
         }
         
@@ -54,7 +50,6 @@
 </header>
 
 <main>
-    <br>
 
     <div class="content-container">
         <div class="text-container">
