--- a/index.html
+++ b/index.html
@@ -73,5 +73,12 @@ With a degree in Statistics and five years of experience in corporate strategy r
 
 </main>
 
+<footer>
+    <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75" target="_blank">
+        <img class="linkedin-logo" src="Northfield.jpg" alt="LinkedIn Logo">
+    </a>
+    contact@girardi.io
+</footer>
+
 </body>
 </html>
