--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ With a degree in Statistics and five years of experience in corporate strategy r
 
 <footer>
     <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75" target="_blank">
-        <img class="linkedin-logo" src="Northfield.jpg" alt="LinkedIn Logo">
+        <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
     contact@girardi.io
 </footer>
