--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ With a degree in Statistics and five years of experience in corporate strategy r
 </main>
 
 <footer>
-    <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75" target="_blank">
+    <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
                 contact@girardi.io
