--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant currently located in Italy. I have five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. 
+                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. 
             
 
             <p class="main_text">
