--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -14,7 +14,6 @@
         }
 
         .text-container {
-            width: 80%;
             column-count: 3; /* Set the number of columns */
             column-gap: 20px; /* Adjust the gap between columns as needed */
         }
@@ -47,18 +46,26 @@
         <div class="text-container">
 
             <p class="main_text">
-                I pride myself of having an international background, which helps me quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in Brazil, Italy, Germany, and in the US. You can get more detailed info in my CV. I am currently offering two types of services. 
-            </p>
+                <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. 
+</p>
 
             <p class="main_text">
-                <b>Business consulting:</b> With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. I have worked with companies of all sizes and across many industries. My most recent work has been in the tourism space.
-            </p>
+                <b>My goal:</b> Having tackled a variety of complex problems in my previous work experiences, I now want to pass on my knowledge. My goal is twofold. I want to teach business analysts how to build models quickly and reliably. And then I want to show them how to effectively communicate their findings. 
+
+   </p>
 
             <p class="main_text">
-                <b>Quantitative coaching:</b> Quantitative coaching: I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
+                <b>My solution:</b> I found that 1:1 tutoring is the best way to improve someone’s quantitative skills. Differently from watching online courses or Youtube videos, analysts with an individual tutor can focus on their specific knowledge gaps and job requirements. I am also happy to work on a group setting. I work with both Excel and Google Sheets. If useful, I can also work with R.  
             </p>
         </div>
 
+<p class="main_text"> My offerings: I offer three different learning modules: 
+<li><b>Spreadsheet fundamentals:</b> planning ahead, structuring data, must-know formulas, error checking </li> 
+Complex modeling: conceptualizing a model, avoiding redundancies automating data-updates, reducing processing power
+Data visualization and communication: Identifying the key takeaways, tailoring levels of detail to your audience, making graphs that speak for themselves 
+
+</p>
+        
 </main>
 
 <footer>
