--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <p class="main_text">
 
-I pride myself of having an international background, which helps me quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in Brazil, Italy, Germany, and in the US. You can get more detailed info in my CV. I am currently offering two types of services. 
+I have an international background, which helps me to quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in the US, Italy, Germany, and Brazil. You can get more detailed info in my CV. I am currently offering two types of services. 
                 <br> <br>
 
                 <b>Business consulting:</b>
