--- a/italiano.html
+++ b/italiano.html
@@ -46,7 +46,7 @@
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                <font size="+16">Salve,</font> Salve, sono Pedro, consulente aziendale attualmente basato in Italia. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come BCG negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente basato a Montepulciano.
+                Salve, sono Pedro, consulente aziendale attualmente basato in Italia. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come BCG negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente basato a Montepulciano.
             
 
             <p class="main_text">
@@ -54,18 +54,14 @@
 Vanto una formazione internazionale che mi consente di adattarmi rapidamente a nuovi contesti e stili di lavoro. Ho trascorso la mia infanzia in Brasile, ho studiato negli Stati Uniti e ho lavorato in Brasile, Italia, Germania e negli Stati Uniti. Ulteriori dettagli sul mio percorso sono disponibili nel mio curriculum. Al momento, offro due tipologie di servizi.
                 <br> <br>
 
-                <b>Consulenza aziendale:</b>
-
-Consulenza aziendale: Laureato in Statistica con cinque anni di esperienza in ruoli di strategia aziendale, posso risolvere complessi problemi legati ai dati e offrire raccomandazioni pratiche per la tua azienda. Ho collaborato con imprese di tutte le dimensioni e in vari settori, con particolare focus nell'ambito del turismo.
+                <b>Consulenza aziendale:</b> Laureato in Statistica con cinque anni di esperienza in ruoli di strategia aziendale, posso risolvere complessi problemi legati ai dati e offrire raccomandazioni pratiche per la tua azienda. Ho collaborato con imprese di tutte le dimensioni e in vari settori, con particolare focus nell'ambito del turismo.
                 <br> <br>
 
                 <b>Quantitative coaching:</b> Desidero impartire competenze quantitative agli analisti aziendali, aiutandoli a eccellere. Ho notato che la principale sfida per gli analisti è la capacità di analizzare con precisione ed efficienza i dati e condividere le proprie conclusioni. Che Lei sia uno studente, un analista o un dipartimento HR di un'azienda, ritengo di aiutarLa. 
                 <br> <br>
 
-Mi piace entrare in contatto con nuove persone. Non esiti a contattarmi su pedro@girardi.io.
-                <br> <br>
 
-                Mi piace conoscere nuove persone. Non esitare a contattarmi a pedro@girardi.io.<br> <br><br> <br>
+                Mi piace conoscere nuove persone. Non esiti a contattarmi a pedro@girardi.io.<br> <br><br> <br>
             </p>
         </div>
 
