--- a/italiano.html
+++ b/italiano.html
@@ -22,7 +22,16 @@
             height: auto;
         }
 
-        
+        footer a.linkedin-logo {
+    margin-right: 15px; /* Adjust the margin for more separation */
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    margin-left: 10px; /* Add margin to separate the email address */
+}
         
     </style>
 </head>
