--- a/italiano.html
+++ b/italiano.html
@@ -55,7 +55,7 @@ footer a {
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                Salve, sono Pedro, consulente aziendale attualmente basato in Italia. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come BCG negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente basato a Montepulciano.
+                Salve, sono Pedro, consulente aziendale attualmente basato a Montepulciano. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come BCG negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente.
             
 
             <p class="main_text">
