--- a/italiano.html
+++ b/italiano.html
@@ -45,7 +45,7 @@ footer a {
     <div class="margin_header">
         <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
-        <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/cv-it"><div class="sections_header"> CV </div></a>
     </div>
     <div class="mod_br_small"></div>
 </header>
