--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -32,7 +32,6 @@
 
 <main>
 
-    <div class="content-container">
         <div class="text-container">
 
                <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. 
@@ -43,12 +42,12 @@
             </p>
         </div>
 
-<p class="main_text"> My offerings: I offer three different learning modules: 
+<div class="main_text"> My offerings: I offer three different learning modules: 
 <li><b>Spreadsheet fundamentals:</b> planning ahead, structuring data, must-know formulas, error checking </li> 
 <li><b>Complex modeling:</b> conceptualizing a model, avoiding redundancies automating data-updates, reducing processing power </li>
 <li><b>Data visualization and communication:</b> Identifying the key takeaways, tailoring levels of detail to your audience, making graphs that speak for themselves </li>
 
-</p>
+</div>
         
 </main>
 
