--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -32,22 +32,22 @@
 
 <main>
 
-        <div class="text-container">
+<div class="text-container main_text-container">
+    <p class="main_text">
 
                <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. 
 
                 <b>My goal:</b> Having tackled a variety of complex problems in my previous work experiences, I now want to pass on my knowledge. My goal is twofold. I want to teach business analysts how to build models quickly and reliably. And then I want to show them how to effectively communicate their findings. 
 
                 <b>My solution:</b> I found that 1:1 tutoring is the best way to improve someone’s quantitative skills. Differently from watching online courses or Youtube videos, analysts with an individual tutor can focus on their specific knowledge gaps and job requirements. I am also happy to work on a group setting. I work with both Excel and Google Sheets. If useful, I can also work with R.  
-            </p>
-        </div>
+          
 
-<div class="main_text"> My offerings: I offer three different learning modules: 
+ My offerings: I offer three different learning modules: 
 <li><b>Spreadsheet fundamentals:</b> planning ahead, structuring data, must-know formulas, error checking </li> 
 <li><b>Complex modeling:</b> conceptualizing a model, avoiding redundancies automating data-updates, reducing processing power </li>
 <li><b>Data visualization and communication:</b> Identifying the key takeaways, tailoring levels of detail to your audience, making graphs that speak for themselves </li>
 
-</div>
+    </p></div>
         
 </main>
 
