--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ With a degree in Statistics and five years of experience in corporate strategy r
     <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
-                contact@girardi.io
+         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
 </footer>
 
 </body>
